--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -3,6 +3,17 @@
   "compileOnSave": false,
   "compilerOptions": {
     "baseUrl": "./",
+    "paths": {
+      "src/*": ["./src/*"],
+      "@app/*": [ "src/app/*" ],
+      "@pages/*": [ "src/app/pages/*" ],
+      "@global/*": [ "src/app/global/*" ],
+      "@shared/*": [ "src/app/shared/*" ],
+      "@angular-material/*": ["src/app/shared/angular-material/*" ],
+      "@core/*": [ "src/app/core/*" ],
+      "@assets/*": [ "src/assets/*" ],
+      "@env/*": [ "src/environments/*" ],
+    },
     "outDir": "./dist/out-tsc",
     "sourceMap": true,
     "declaration": false,
