Adding basic components structure

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -8,11 +8,16 @@
       "@app/*": [ "src/app/*" ],
       "@pages/*": [ "src/app/pages/*" ],
       "@global/*": [ "src/app/global/*" ],
+      "@core/*": [ "src/app/core/*" ],
       "@shared/*": [ "src/app/shared/*" ],
       "@material/*": [ "src/app/shared/angular-material/*" ],
-      "@core/*": [ "src/app/core/*" ],
       "@assets/*": [ "src/assets/*" ],
       "@env/*": [ "src/environments/*" ],
+      "@swapper/*": [ "src/app/swapper/*" ],
+      "@slider/*": [ "src/app/slider/*" ],
+      "@card/*": [ "src/app/card/*" ],
+      "@social-links/*": [ "src/app/shared/social-links/*" ],
+      "@tools-reel/*": [ "src/app/shared/tools-reel/*" ],
     },
     "outDir": "./dist/out-tsc",
     "sourceMap": true,
